--- a/package.json
+++ b/package.json
@@ -13,12 +13,14 @@
     "next": "14.2.4",
     "nodemailer": "^6.9.0",
     "openai": "^4.57.0",
+    "papaparse": "^5.5.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
     "@types/node": "^20.11.0",
     "@types/nodemailer": "^7.0.4",
+    "@types/papaparse": "^5.5.0",
     "@types/react": "^18.2.0",
     "@types/react-dom": "^18.2.0",
     "eslint": "^8.57.0",
