auto send approved

--- a/vercel.json
+++ b/vercel.json
@@ -7,6 +7,10 @@
     {
       "path": "/api/cron-sendEmails",
       "schedule": "*/10 * * * *"
-    }
+    },
+      {
+        "path": "/api/cron-sendEmails",
+        "schedule": "*/15 7-19 * * *"
+      }
   ]
 }
